force-app/main/default/objects/ApproverMapping__c/ApproverMapping__c.object-meta.xml
<CustomObject>
    <label>审批人Mapping</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>