force-app/main/default/objects/ApproverMapping__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>勾选后，审批人才会应用到相应批准过程。</inlineHelpText>
    <label>启用</label>
    <type>Checkbox</type>
</CustomField>