force-app/main/default/objects/ApproverMapping__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>部门</label>
    <length>20</length>
    <type>Text</type>
</CustomField>