force-app/main/default/objects/ApproverMapping__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>分部</label>
    <length>20</length>
    <type>Text</type>
</CustomField>