force-app/main/default/objects/ApproverMapping__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>业务</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OperationGlobal</valueSetName>
    </valueSet>
</CustomField>