force-app/main/default/objects/ApproverMapping__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>负责区域</label>
    <length>40</length>
    <type>Text</type>
</CustomField>