force-app/main/default/objects/ApproverMapping__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>职务</label>
    <length>20</length>
    <type>Text</type>
</CustomField>