force-app/main/default/objects/ApproverMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Operation__c</columns>
    <columns>Department__c</columns>
    <columns>Division__c</columns>
    <columns>Title__c</columns>
    <columns>Territory__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>